Fix #3749 Viewer pages do not overflow

--- a/viewer/latexworkshop.css
+++ b/viewer/latexworkshop.css
@@ -80,6 +80,7 @@ html[dir='rtl'] .findbar {
 
 .pdfViewer.removePageBorders .page {
     border: none;
+    overflow: hidden;
     box-shadow: 0px 0px 0px 1px lightgrey;
 }
 
